[tool.poetry]
name = "cc_27"
version = "0.1.0"
description = ""
authors = ["Arthur Lozano <chillout885@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
