[tool.poetry]
name = "tree_intersection"
version = "0.1.0"
description = ""
authors = ["Arthur <chillout885@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
